fix: disable Go caching to avoid file conflicts on self-hosted runners
- Set cache: false in actions/setup-go@v5
- Self-hosted runners have persistent Go module cache that conflicts with cache restoration
- This eliminates 'File exists' errors during cache extraction
- Go will download dependencies fresh each time, ensuring clean builds
- More reliable for self-hosted runner environments with persistent state

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -112,8 +112,7 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
-          cache: true
-          cache-dependency-path: ${{ env.WORKING_DIRECTORY }}/go.sum
+          cache: false
 
       - name: Set up Go environment
         run: |
@@ -212,8 +211,7 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
-          cache: true
-          cache-dependency-path: ${{ env.WORKING_DIRECTORY }}/go.sum
+          cache: false
 
       - name: Set up Go environment
         run: |
@@ -272,8 +270,7 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
-          cache: true
-          cache-dependency-path: ${{ env.WORKING_DIRECTORY }}/go.sum
+          cache: false
 
       - name: Set up Go environment
         run: |
@@ -364,8 +361,7 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
-          cache: true
-          cache-dependency-path: ${{ env.WORKING_DIRECTORY }}/go.sum
+          cache: false
 
       - name: Set up Go environment
         run: |
