fix: add environment context to integration tests job
- Add environment: ${{ inputs.environment || 'dev' }} to integration-tests job
- This allows access to environment-specific secrets (dev, staging, production)
- Follows the same pattern as gauth.yaml workflow
- Integration tests will now use the dev environment secrets by default
- Fixes the 'SUPABASE_URL secret is not set' error when dev environment is configured

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -258,6 +258,7 @@ jobs:
     runs-on: [self-hosted, ovh, ubuntu-22.04]
     needs: [code-quality, unit-tests]
     if: ${{ (github.event_name != 'workflow_dispatch' || inputs.run_type == 'full' || inputs.run_type == 'tests-only') && !inputs.skip_integration_tests }}
+    environment: ${{ inputs.environment || 'dev' }}
     defaults:
       run:
         working-directory: ${{ env.WORKING_DIRECTORY }}
