--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -358,8 +358,89 @@ jobs:
           SUPABASE_API_KEY: ${{ secrets.SUPABASE_API_KEY }}
           TEST_SCHEMA: testing_db
 
+  # End-to-End Tests (requires Supabase database)
+  e2e-tests:
+    name: E2E Tests
+    runs-on: [self-hosted, ovh, ubuntu-22.04]
+    needs: [code-quality, unit-tests, integration-tests]
+    if: ${{ (github.event_name != 'workflow_dispatch' || inputs.run_type == 'full' || inputs.run_type == 'tests-only') && inputs.run_e2e_tests != false }}
+    environment: ${{ inputs.environment || 'dev' }}
+    timeout-minutes: 15
+    defaults:
+      run:
+        working-directory: ${{ env.WORKING_DIRECTORY }}
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: ${{ env.GO_VERSION }}
+          cache: false
+
+      - name: Set up Go environment
+        run: |
+          # Set up Go environment with explicit configuration
+          export PATH="/bin:/usr/bin:/usr/local/bin:/usr/local/go/bin:/home/github-runner/go/bin:$PATH"
+          export GOSUMDB="sum.golang.org"
+          export GOPROXY="https://proxy.golang.org,direct"
+          
+          # Add to environment for subsequent steps
+          echo "PATH=/bin:/usr/bin:/usr/local/bin:/usr/local/go/bin:/home/github-runner/go/bin:$PATH" >> $GITHUB_ENV
+          echo "GOSUMDB=sum.golang.org" >> $GITHUB_ENV
+          echo "GOPROXY=https://proxy.golang.org,direct" >> $GITHUB_ENV
+
+      - name: Download dependencies
+        run: |
+          go mod download
+          go mod verify
+
+      - name: Set up test environment
+        run: |
+          echo "🔧 Setting up E2E test environment..."
+          echo "Environment variables will be provided via GitHub Actions env"
+
+      - name: Run database migrations
+        run: |
+          # Set up Go environment explicitly
+          export PATH="/bin:/usr/bin:/usr/local/bin:/usr/local/go/bin:/home/github-runner/go/bin:$PATH"
+          export GOSUMDB="sum.golang.org"
+          export GOPROXY="https://proxy.golang.org,direct"
+          
+          echo "🗄️ Running database migrations for E2E tests..."
+          echo "SUPABASE_URL: $SUPABASE_URL"
+          echo "SUPABASE_API_KEY: $SUPABASE_API_KEY"
+          echo "DATABASE_PASSWORD: $DATABASE_PASSWORD"
+          
+          # Check if secrets are available
+          if [ -z "$SUPABASE_URL" ]; then
+            echo "❌ ERROR: SUPABASE_URL secret is not set in GitHub repository"
+            echo "Please configure SUPABASE_URL in repository settings > Secrets and variables > Actions"
+            exit 1
+          fi
+          
+          if [ -z "$SUPABASE_API_KEY" ]; then
+            echo "❌ ERROR: SUPABASE_API_KEY secret is not set in GitHub repository"
+            echo "Please configure SUPABASE_API_KEY in repository settings > Secrets and variables > Actions"
+            exit 1
+          fi
+          
+          if [ -z "$DATABASE_PASSWORD" ]; then
+            echo "❌ ERROR: DATABASE_PASSWORD secret is not set in GitHub repository"
+            echo "Please configure DATABASE_PASSWORD in repository settings > Secrets and variables > Actions"
+            echo "This should be your Supabase database password for direct PostgreSQL access"
+            exit 1
+          fi
+          
+          go run cmd/migrate/main.go
+        env:
+          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+          SUPABASE_API_KEY: ${{ secrets.SUPABASE_API_KEY }}
+          DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
+
       - name: Run E2E tests
-        if: ${{ inputs.run_e2e_tests != false }}
         run: |
           # Set up Go environment explicitly
           export PATH="/bin:/usr/bin:/usr/local/bin:/usr/local/go/bin:/home/github-runner/go/bin:$PATH"
@@ -367,6 +448,9 @@ jobs:
           export GOPROXY="https://proxy.golang.org,direct"
           
           echo "🌐 Running End-to-End Tests..."
+          echo "SUPABASE_URL: $SUPABASE_URL"
+          echo "SUPABASE_API_KEY: $SUPABASE_API_KEY"
+          echo "TEST_SCHEMA: $TEST_SCHEMA"
           go test ./tests/e2e/... -v -timeout=15m
         env:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
@@ -377,7 +461,7 @@ jobs:
   build:
     name: Build Verification
     runs-on: [self-hosted, ovh, ubuntu-22.04]
-    needs: [code-quality, unit-tests]
+    needs: [code-quality, unit-tests, integration-tests, e2e-tests]
     if: ${{ github.event_name != 'workflow_dispatch' || inputs.run_type == 'full' || inputs.run_type == 'build-only' || inputs.run_type == 'deploy-only' }}
     defaults:
       run:
@@ -472,7 +556,7 @@ jobs:
   deploy:
     name: Deploy to ${{ inputs.environment }}
     runs-on: [self-hosted, ovh, ubuntu-22.04]
-    needs: [code-quality, unit-tests, build]
+    needs: [code-quality, unit-tests, integration-tests, e2e-tests, build]
     if: ${{ github.event_name == 'workflow_dispatch' && (inputs.run_type == 'full' || inputs.run_type == 'deploy-only') && inputs.environment != 'none' }}
     defaults:
       run:
@@ -544,8 +628,8 @@ jobs:
   notify-failure:
     name: Notify on Failure
     runs-on: [self-hosted, ovh, ubuntu-22.04]
-    needs: [code-quality, unit-tests, build]
-    if: always() && (needs.code-quality.result == 'failure' || needs.unit-tests.result == 'failure' || needs.build.result == 'failure')
+    needs: [code-quality, unit-tests, integration-tests, e2e-tests, build]
+    if: always() && (needs.code-quality.result == 'failure' || needs.unit-tests.result == 'failure' || needs.integration-tests.result == 'failure' || needs.e2e-tests.result == 'failure' || needs.build.result == 'failure')
     
     steps:
       - name: Notify failure
