Revert "Feat/backend test cases"

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -1,7 +1,7 @@
 # Spark Park Cricket Backend - Makefile
 # This Makefile provides commands for running tests and managing the project
 
-.PHONY: help test test-unit test-integration test-e2e test-illegal test-series test-match test-scorecard test-all build run clean setup-test-db
+.PHONY: help test test-unit test-integration test-e2e test-illegal test-all build run clean setup-test-db
 
 # Default target
 help:
@@ -13,9 +13,6 @@ help:
 	@echo "  test-integration Run integration tests (requires database)"
 	@echo "  test-e2e         Run end-to-end tests (requires database)"
 	@echo "  test-illegal     Run illegal balls tests (requires database)"
-	@echo "  test-series      Run series-specific tests (unit + integration)"
-	@echo "  test-match       Run match-specific tests (unit + integration + e2e)"
-	@echo "  test-scorecard   Run scorecard-specific tests (unit + integration + e2e)"
 	@echo "  test-all         Run all tests using Go test runner"
 	@echo ""
 	@echo "Build Commands:"
@@ -35,68 +32,27 @@ help:
 test-unit:
 	@echo "🧪 Running Unit Tests..."
 	@echo "------------------------"
-	go test ./tests/unit/ -v
+	go test ./internal/tests/match_completion_unit_test.go -v
 
 # Integration tests (requires database)
 test-integration:
 	@echo "🔗 Running Integration Tests..."
 	@echo "-------------------------------"
 	@echo "⚠️  Note: Integration tests require a running Supabase instance"
-	go test ./tests/integration/ -v
+	go test ./internal/tests/match_completion_integration_test.go -v
 
 # End-to-end tests (requires database)
 test-e2e:
 	@echo "🌐 Running End-to-End Tests..."
 	@echo "------------------------------"
 	@echo "⚠️  Note: E2E tests require a running Supabase instance"
-	go test ./tests/e2e/ -v
+	go test ./internal/tests/match_completion_e2e_test.go -v
 
 # Illegal balls tests (requires database)
 test-illegal:
 	@echo "⚾ Running Illegal Balls Tests..."
 	@echo "--------------------------------"
-	go test ./tests/integration/illegal_balls_comprehensive_test.go -v
-
-# Series-specific tests
-test-series:
-	@echo "🏏 Running Series Tests..."
-	@echo "========================="
-	@echo "Unit tests (no database required):"
-	go test ./tests/unit/match_completion_unit_test.go ./tests/unit/series_service_test.go ./tests/unit/series_handler_test.go -v
-	@echo ""
-	@echo "Integration tests (requires database):"
-	@echo "⚠️  Note: Integration tests require a running Supabase instance"
-	go test ./tests/integration/series_integration_test.go -v
-
-# Match-specific tests
-test-match:
-	@echo "🏏 Running Match Tests..."
-	@echo "========================="
-	@echo "Unit tests (no database required):"
-	go test ./tests/unit/match_completion_unit_test.go ./tests/unit/match_service_test.go ./tests/unit/match_handler_test.go -v
-	@echo ""
-	@echo "Integration tests (requires database):"
-	@echo "⚠️  Note: Integration tests require a running Supabase instance"
-	go test ./tests/integration/match_integration_test.go -v
-	@echo ""
-	@echo "E2E tests (requires database):"
-	@echo "⚠️  Note: E2E tests require a running Supabase instance"
-	go test ./tests/e2e/match_workflow_e2e_test.go -v
-
-# Scorecard-specific tests
-test-scorecard:
-	@echo "🏏 Running Scorecard Tests..."
-	@echo "============================="
-	@echo "Unit tests (no database required):"
-	go test ./tests/unit/match_completion_unit_test.go ./tests/unit/scorecard_service_test.go ./tests/unit/scorecard_handler_test.go -v
-	@echo ""
-	@echo "Integration tests (requires database):"
-	@echo "⚠️  Note: Integration tests require a running Supabase instance"
-	go test ./tests/integration/scorecard_integration_test.go -v
-	@echo ""
-	@echo "E2E tests (requires database):"
-	@echo "⚠️  Note: E2E tests require a running Supabase instance"
-	go test ./tests/e2e/scorecard_workflow_e2e_test.go -v
+	go test ./internal/tests/illegal_balls_comprehensive_test.go -v
 
 # Run all tests using the Go test runner
 test-all:
