--- a/web/cypress/tsconfig.json
+++ b/web/cypress/tsconfig.json
@@ -1,20 +1,7 @@
 {
+    "extends": "../tsconfig.json",
     "compilerOptions": {
-        "target": "es5",
-        "lib": [
-            "es5",
-            "dom"
-        ],
-        "allowJs": true,
-        "skipLibCheck": true,
-        "esModuleInterop": true,
-        "allowSyntheticDefaultImports": true,
-        "strict": true,
-        "forceConsistentCasingInFileNames": true,
-        "moduleResolution": "node",
-        "resolveJsonModule": true,
         "isolatedModules": false,
-        "noEmit": true,
         "types": [
             "cypress",
             "node"
