--- a/backend/env.example
+++ b/backend/env.example
@@ -8,3 +8,9 @@ DATABASE_SCHEMA=prod_v1
 
 # Server Configuration
 PORT=8080
+
+# Redis Cache Configuration
+REDIS_URL=localhost:6379
+REDIS_PASSWORD=
+REDIS_DB=0
+CACHE_ENABLED=true
