fix: handle cache operation errors and improve test reliability
- Updated cache operations in various repository methods to handle potential errors by using error checks.
- Enhanced benchmark tests to ensure proper error handling during cache set and response unmarshalling.
- Improved cache invalidation logic to maintain consistency across different repository actions.

--- a/.gitignore
+++ b/.gitignore
@@ -51,4 +51,5 @@ backend/server.log
 backend/supabase/
 backend/internal/database/schema_v1_prod.sql
 backend/api/
+backend/bin/server
 backend/server
